2001-12-03  Thorsten Kukuk  <kukuk@suse.de>

	* ypxfr/ypxfr.c (ypxfr): Don't replace name of master with
	FQDN, else ypserv cannot compare it later.

2001-11-26  Thorsten Kukuk  <kukuk@suse.de>

	* release version 2.2

	* scripts/ypinit.in (ypinit_master): Add missing else case
	(don't print error message in success case). Reported by
	Michael Sterrett <msterret@coat.com>.

	* lib/access.c (is_valid): Fix return value if host is not
	allowed to connect.
	* scripts/ypxfr_1perday.in: Add variable for maps.
	* scripts/ypxfr_1perhour.in: Likewise.
	* scripts/ypxfr_2perday.in: Likewise.

2001-10-29  Thorsten Kukuk  <kukuk@suse.de>

	* acinclude.m4: New, contains macro for ElectricFence option
	* configure.in: Add option for dmalloc and ElectricFence

	* ypserv/server.c (ypproc_all_2_svc): Reset callback data
	  at beginning to avoid bogus data if we abort with an error.
	  (ypall_close): Abort if data is NULL.

	* yphelper/yphelper.c: Allow IP numbers as hostname, also
	  lookup hostname from NIS map for compare.

2001-09-02  Thorsten Kukuk  <kukuk@suse.de>

	* release version 2.1

	* rpc.yppasswdd/yppasswdd.c: Implement --port parameter to
	  bind to a special port.
	* rpc.yppasswdd/rpc.yppasswdd.8.in: Document new parameter.

2001-09-02  Martin Vidner <mvidner@suse.cz>

	* Fix various errors in manual pages

2001-08-30  Thorsten Kukuk  <kukuk@suse.de>

	* lib/Makefile.am: Remove ypproc_all_2.c
	* ypxfr/ypxfr_xdr.c: Add special ypproc_all_2 function
	* ypxfr/ypxfr.8: Renamed from this ...
	* ypxfr/ypxfr.8.in: ... to this
	* yppush/yppush.8: Renamed from this ...
	* yppush/yppush.8.in: ... to this
	* configure.in: create ypxfr/ypxfr.8 and yppush/yppush.8
	* revnetgroup/revnetgroup.8.in: New

2001-08-26  Thorsten Kukuk  <kukuk@suse.de>

	* scripts/Makefile.am: Don't strip scripts
	* ypserv/server.c: Fix null byte termination of order number
	(reported by Juergen Holm <holm@Theorie.Physik.UNI-Goettingen.DE>)

2001-08-20  Thorsten Kukuk  <kukuk@suse.de>
