@@ -1,3 +1,8 @@
+2001-12-16  Thorsten Kukuk  <kukuk@thkukuk.de>
+
+	* ypserv/server.c: Add missing break in switch statement.
+	* ypserv/ypserv.c (main): getopt returns -1, not EOF.
+
 2001-12-03  Thorsten Kukuk  <kukuk@suse.de>
 
 	* ypxfr/ypxfr.c (ypxfr): Don't replace name of master with
